# MOST

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9e93875  Installation.md  MeetingMinutes9_10_25.txt  README.md  databaseview.cpp  databaseview.h  databaseview.ui  etName = default  flashcardmaker.cpp  flashcardmaker.h  flashcardmaker.ui  flashcardstudy.cpp  flashcardstudy.h  flashcardstudy.ui  homePage.ui  homepage.cpp  homepage.h  installation.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meetingMinutes9_16_25.txt  resources.qrc
.github/workflows/: assignment6.yml  ci-assignment6.yml  cmake-single-platform.yml
Database/: database.cpp  database.h  database2.cpp  database2.h  databaseflashcard.cpp  databaseflashcard.h  databasequiz.cpp  databasequiz.h  databasequizloader.cpp  databasequizloader.h  flashCardData.cpp  flashCardData.h
FlashcardModule/: FlashCardMakerTest.cpp  databasemanager.cpp  databasemanager.h  flashCardData.cpp  flashCardData.h  flashCards.h  flashcardmaker.cpp  flashcardmaker.h  flashcardmaker.ui  flashcardstudy.cpp  flashcardstudy.h  flashcardstudy.ui
Homepage/: homepage.cpp  homepage.h  homepage.ui
Project Outline/: Modular Study Assistant outline.md
QuizModule/: quiz.cpp  quizbank.cpp  quizbank.h  quizcreate.cpp  quizcreate.h  quizmenu.cpp  quizmenu.h  quizqbuilder.cpp  quizqbuilder.h  quizquestion.h  quizreview.cpp  quizreview.h  quizsession.cpp  quizsession.h  quizstudy.cpp  quizstudy.h  quizwindow.cpp  quizwindow.h  quizwindow.ui
SampleQuizTemplate/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
UnitTest/: quizwindowunittest.cpp  quizwindowunittest.h  tst_flashcardstudy.cpp  unittest.cpp  unittest_databasequiz.cpp
